# encrypto-anonymizer

./: .gitignore  LICENSE  README.md  README_LOCAL.md  README_UUID_REPLACER.md  anonymizer_cli.py  encrypto_anonymizer.ipynb  encrypto_anonymizer_local.ipynb  pyproject.toml  requirements.txt  setup.sh  uuid_replacer.py
