[project]
name = "encrypto-anonymizer"
version = "1.0.0"
description = "A tool to anonymize and encrypt CSV data securely"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.0",
    "cryptography>=41.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"